--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">
+  <meta name="theme-color" content="#ddddff">
   <meta http-equiv='cache-control' content='no-cache'>
   <meta http-equiv='expires' content='0'>
   <meta http-equiv='pragma' content='no-cache'>
@@ -31,9 +31,11 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-  <link rel="manifest" href="./manifest.json">
+  
   <link rel="shortcut icon" href="./favicon.ico">
-
+  <link rel="icon" href="./favicon.ico">
+  <link type="image/png" sizes="32x32" rel="icon" href="./favicon.png">
+  <link rel="manifest" href="./manifest.json">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
